--- a/index.html
+++ b/index.html
@@ -280,13 +280,10 @@
                 let h = "https://cors-anywhere.herokuapp.com/http://ip-api.com/json/" + String(ipOrHostname);
                 $.ajax(h, {
                     type: "GET",
-                    crossDomain: true,
-                    contentType: "application/json",
-                    headers: {
-                        'Access-Control-Allow-Origin': '*'
-                    },
-                    secure: true,
                     dataType: 'json',
+                    headers: {
+                        "x-requested-with": "xhr"
+                    },
                     success: function (result) {
                         $('#results-map-card').slideDown();
                         $('#json-results').html(JSON.stringify(result, undefined, 2))
