--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Best App Ever. Duh.">
+    <meta name="description" content="Geo map public IP addresses">
     <meta name="author" content="Matt Oestreich">
     <link rel="icon" type="image/png" sizes="16x16" href="../docs/favicon.png">
     <title>ipMapper</title>
@@ -228,6 +228,10 @@
 
     <script>
         $(function () {
+
+            if (location.protocol === "https:") {
+                location.protocol = "http:";
+            }
 
             let slideUp = function (a, b) {
                 $('#' + a).slideUp('slow');
