--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.2/css/bootstrap-select.min.css"
         integrity="sha384-ZavCY/mrwfrTwoTzagp0wAGJB2MmGRcgD/hDlx/e56dfZojuydghe0E3/Bk1VKu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+        crossorigin="" />
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -198,10 +200,14 @@
                         <h5 class="m-b-0">Results</h5>
                     </div>
                     <div class="card-body">
-                        <div class="col-md-4">
-                            <pre id="json-results"></pre>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <pre id="json-results"></pre>
+                            </div>
+                            <div class="col-md-8">
+                                <div id="map-results" style="width:900px; height:400px;"></div>
+                            </div>
                         </div>
-                        <div class="col-md-8"></div>
                     </div>
                 </div>
             </div>
@@ -225,6 +231,8 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.2/js/bootstrap-select.min.js" integrity="sha384-xuUB7RiCht6gdWrTGeTHiVRhtXiryS5fNys9jjr4bhj4S0mmw4jICW287qdx15RV"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+        crossorigin=""></script>
 
     <script>
         $(function () {
@@ -287,6 +295,14 @@
                     success: function (result) {
                         $('#results-map-card').slideDown();
                         $('#json-results').html(JSON.stringify(result, undefined, 2))
+                        var jsonResult = JSON.parse(JSON.stringify(result));
+                        let lng = jsonResult.lon;
+                        let lat = jsonResult.lat;
+                        var map = L.map('map-results').setView([lat, lng], 13);
+                        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+                        }).addTo(map);
+                        L.marker([lat, lng]).addTo(map);
                     },
                     error: function () {
                         alert("Error! Can't query " + h);
