--- a/index.html
+++ b/index.html
@@ -224,12 +224,10 @@
 
             if (location.protocol === "https:") {
                 let toast = `
-                <div class="alert alert-danger" role="alert">
+                <div class="alert alert-danger m-t-60" role="alert">
                     <h4 class="alert-heading">HTTPS Detected</h4>
                     <p>In order to prevent 'Mixed Content' errors with our API providers, please use this site with HTTP!
                     Otherwise, you will need to provide API keys to all providers</p>
-                    <hr>
-                    <p class="mb-0">Otherwise, you will need to provide API keys to all providers</p>
                 </div>
                 `
                 $('.btn-option').addClass("disabled").attr("disabled", "disabled");
