--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
         $(function () {
 
             if (location.protocol === "https:") {
-                let toast = `
+                let h = location.hostname;
+                location.replace("http://"+h);
+                /*let toast = `
                 <div class="alert alert-danger m-t-60" role="alert">
                     <h4 class="alert-heading">HTTPS Detected</h4>
                     <p>In order to prevent 'Mixed Content' errors with our API providers, please use this site with HTTP!
@@ -231,7 +233,8 @@
                 </div>
                 `
                 $('.btn-option').addClass("disabled").attr("disabled", "disabled");
-                $('.page-wrapper').html(toast);
+                $('.page-wrapper').html(toast);*/
+
             }
 
             let slideUp = function (a, b) {
