--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </div>
                     <div class="card-body">
                         <!----------------------------------------------------------------->
-                        <!-- SELECT PROVIDER -->
+                        <!-- PROVIDER DROP DOWN -->
                         <!----------------------------------------------------------------->
                         <div class="row m-t-10">
                             <div class="form-group mx-auto" style="border: 1px solid black;">
@@ -143,7 +143,7 @@
                             </div>
                         </div>
                         <!----------------------------------------------------------------->
-                        <!-- END SELECT PROVIDER -->
+                        <!-- END PROVIDER DROP DOWN -->
                         <!----------------------------------------------------------------->
                         <!----------------------------------------------------------------->
                         <!-- ENTER API KEY -->
