--- a/index.html
+++ b/index.html
@@ -167,9 +167,40 @@
 
             if (location.protocol === "https:") {
                 location.replace("http://"+location.hostname);
-                setTimeout(function(){
-                    showRedirectToast();
-                }, 200);
+                createCookie('ipmapperredirected', 'true', 1);
+            }
+
+            if (readCookie('ipmapperredirected')) {
+                console.log(readCookie('ipmapperredirected'))
+            }
+
+            let createCookie = function (name, value, days) {
+                var expires;
+                if (days) {
+                    var date = new Date();
+                    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                    expires = "; expires=" + date.toGMTString();
+                } else {
+                    expires = "";
+                }
+                document.cookie = encodeURIComponent(name) + "=" + encodeURIComponent(value) + expires + "; path=/";
+            }
+
+            let readCookie = function (name) {
+                var nameEQ = encodeURIComponent(name) + "=";
+                var ca = document.cookie.split(';');
+                for (var i = 0; i < ca.length; i++) {
+                    var c = ca[i];
+                    while (c.charAt(0) === ' ')
+                        c = c.substring(1, c.length);
+                    if (c.indexOf(nameEQ) === 0)
+                        return decodeURIComponent(c.substring(nameEQ.length, c.length));
+                }
+                return null;
+            }
+
+            let eraseCookie = function (name) {
+                createCookie(name, "", -1);
             }
 
             let slideControlUp = function (id) {
