--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
         crossorigin=""></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js" integrity="sha384-8kKqrPvADL3/ZYJGtcqeG+fveXaJxTaI7LF1/a9QGZpkRVZSurP858KKE6rtnLLs" 
+        crossorigin="anonymous"></script>
 
     <script>
         $(function () {
@@ -166,42 +168,11 @@
             }
 
             if (location.protocol === "https:") {
+                Cookies.set('matt','val', { expires: 1 });
                 location.replace("http://"+location.hostname);
-                createCookie('ipmapperredirected', 'true', 1);
             }
 
-            if (readCookie('ipmapperredirected')) {
-                console.log(readCookie('ipmapperredirected'))
-            }
-
-            let createCookie = function (name, value, days) {
-                var expires;
-                if (days) {
-                    var date = new Date();
-                    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-                    expires = "; expires=" + date.toGMTString();
-                } else {
-                    expires = "";
-                }
-                document.cookie = encodeURIComponent(name) + "=" + encodeURIComponent(value) + expires + "; path=/";
-            }
-
-            let readCookie = function (name) {
-                var nameEQ = encodeURIComponent(name) + "=";
-                var ca = document.cookie.split(';');
-                for (var i = 0; i < ca.length; i++) {
-                    var c = ca[i];
-                    while (c.charAt(0) === ' ')
-                        c = c.substring(1, c.length);
-                    if (c.indexOf(nameEQ) === 0)
-                        return decodeURIComponent(c.substring(nameEQ.length, c.length));
-                }
-                return null;
-            }
-
-            let eraseCookie = function (name) {
-                createCookie(name, "", -1);
-            }
+            alert(Cookies.get('matt'));
 
             let slideControlUp = function (id) {
                 if (Array.isArray(id)) { 
