--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.2/css/bootstrap-select.min.css"
         integrity="sha384-ZavCY/mrwfrTwoTzagp0wAGJB2MmGRcgD/hDlx/e56dfZojuydghe0E3/Bk1VKu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.css" integrity="sha384-G/A+0aOOLD5kUMKNxuvWw0dl71P23X8Ag5YpNKKxINQPf2uM42AomzFEyURI5mPk" 
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.css"
+        integrity="sha384-G/A+0aOOLD5kUMKNxuvWw0dl71P23X8Ag5YpNKKxINQPf2uM42AomzFEyURI5mPk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
         crossorigin="">
     <!--[if lt IE 9]>
@@ -100,9 +100,7 @@
                                     <!----------------------------------------------------------------->
                                     <div class="inline-field m-t-0">
                                         <input type="checkbox" class="form-check" id="use-current-connection-checkbox">
-                                        <label for="use-current-connection">
-                                            <small> Use Current IP</small>
-                                        </label>
+                                        <label for="use-current-connection"><small> Use Current IP</small></label>
                                     </div>
                                     <!----------------------------------------------------------------->
                                     <!-- END USE CURRENT IP -->
@@ -125,8 +123,7 @@
             <!----------------------------------------------------------------->
             <!-- RESULTS/MAP CARD -->
             <!----------------------------------------------------------------->
-            <div class="col-md-12 mx-auto is-hidden" id="results-map-card">
-            </div>
+            <div class="col-md-12 mx-auto is-hidden" id="results-map-card"></div>
             <!----------------------------------------------------------------->
             <!-- END RESULTS/MAP CARD -->
             <!----------------------------------------------------------------->
@@ -143,7 +140,7 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.js" integrity="sha384-YupqycgoivoabLgPtAkoBYgi9YA09s9HpK4y9xenANc9/mHUuJDoCtvcOQ5/qvMf" 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.js" integrity="sha384-YupqycgoivoabLgPtAkoBYgi9YA09s9HpK4y9xenANc9/mHUuJDoCtvcOQ5/qvMf"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
@@ -151,7 +148,7 @@
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
         crossorigin=""></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js" integrity="sha384-8kKqrPvADL3/ZYJGtcqeG+fveXaJxTaI7LF1/a9QGZpkRVZSurP858KKE6rtnLLs" 
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js" integrity="sha384-8kKqrPvADL3/ZYJGtcqeG+fveXaJxTaI7LF1/a9QGZpkRVZSurP858KKE6rtnLLs"
         crossorigin="anonymous"></script>
 
     <script>
@@ -160,14 +157,20 @@
             if (Cookies.get('__ipmapperredirected__') === 'true') {
                 $.toast({
                     heading: 'Redirected',
-                    text: "Due to API restrictions, you were redirected to 'http'",
+                    text: "You have been redirected from 'https' to 'http'",
                     icon: 'info',
-                    hideAfter: 4000,
+                    hideAfter: 6500,
+                    showHideTransition: 'slide'
+                });
+                $.toast({
+                    text: "Due to 'Mixed Content' issues, this site can only be used with 'http'. We apologize for any inconvenience.",
+                    icon: 'info',
+                    hideAfter: 6500,
                     showHideTransition: 'slide',
                     afterShown: function () {
                         Cookies.remove('__ipmapperredirected__');
                     }
-                });
+                });                
             }
 
             if (location.protocol === "https:") {
@@ -296,12 +299,8 @@
                 $.ajax(h, {
                     dataType: "json",
                     success: function (result) {
-                        slideControlDown('#results-map-card');
-                        let r = JSON.stringify(result, undefined, 2);
-                        $('#json-results').html(r);
-                        $('#map-display').height($('#results-json-div').height());
-                        let jsonResult = JSON.parse(r);
-                        mapLatLong(jsonResult.lat, jsonResult.lon, 'map-display');
+                        let r = stageMapData(result);
+                        mapLatLong(r.lat, r.lon, 'map-display');
                         scrollTo('#results-map-card');
                     },
                     error: function () {
@@ -315,12 +314,8 @@
                 $.ajax(h, {
                     dataType: "json",
                     success: function (result) {
-                        slideControlDown('#results-map-card');
-                        let r = JSON.stringify(result, undefined, 2);
-                        $('#json-results').html(r);
-                        $('#map-display').height($('#results-json-div').height());
-                        let jsonResult = JSON.parse(r);
-                        mapLatLong(jsonResult.latitude, jsonResult.longitude, 'map-display');
+                        let r = stageMapData(result);
+                        mapLatLong(r.latitude, r.longitude, 'map-display');
                         scrollTo('#results-map-card');
                     },
                     error: function () {
@@ -329,7 +324,15 @@
                 });
             }
 
-            let mapLatLong = function(lat,long,displayElement){
+            let stageMapData = function (data) {
+                slideControlDown('#results-map-card');
+                let r = JSON.stringify(data, undefined, 2);
+                $('#json-results').html(r);
+                $('#map-display').height($('#results-json-div').height());
+                return JSON.parse(r);
+            }
+
+            let mapLatLong = function(lat, long, displayElement){
                 let tl = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
                 let attrib = '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors';
                 let map = L.map(displayElement).setView([lat, long], 13);
@@ -428,8 +431,7 @@
                     <div class="card-footer text-center">
                         <button class="btn btn-danger" id="btn-clear-results">Clear Results</button>
                     </div>
-                </div>
-                `);
+                </div>`);
                 getIpData();
             });
         })
