--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
                     }
                 } else {
                     slideControlUp(['#api-key-slider', '#hostname-or-ip-slider']);
+                    scrollTo('#topbar');
                 }
             });
 
