--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         integrity="sha384-G/A+0aOOLD5kUMKNxuvWw0dl71P23X8Ag5YpNKKxINQPf2uM42AomzFEyURI5mPk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
         crossorigin="">
-    <link rel="stylesheet" href="/docs/site.css">
+    <link rel="stylesheet" href="/docs/ipMapper.css">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -151,7 +151,7 @@
         crossorigin=""></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js" integrity="sha384-8kKqrPvADL3/ZYJGtcqeG+fveXaJxTaI7LF1/a9QGZpkRVZSurP858KKE6rtnLLs"
         crossorigin="anonymous"></script>
-    <script src="/docs/site.js"></script>
+    <script src="/docs/ipMapper.js"></script>
 </body>
 
 </html>
