--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Geo map public IP addresses">
     <meta name="author" content="Matt Oestreich">
-    <meta name="og:image" content="../docs/ostrike_logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../docs/favicon.png">
+    <meta name="og:image" content="../docs/images/ostrike_logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../docs/images/favicon.png">
     <title>ipMapper</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
@@ -32,7 +32,7 @@
     <header class="topbar" id="topbar">
         <span>
             <a href="https://github.com/oze4" rel="noopener noreferrer" target="_blank">
-                <img style="width: 56px; height: 52px;" alt="homepage" src="../docs/ostrike_logo.png">
+                <img style="width: 56px; height: 52px;" alt="homepage" src="../docs/images/ostrike_logo.png">
             </a>
         </span>
     </header>
